--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<!-- Start Body-->
 <section>
 	<div class="text-center" style="margin-top: 70px;">
-		<img style="" src="img/saad.jpg">
+		<img style="width: 50%;" src="img/saad.jpg">
 		<h1>Saad Alotaibi</h1>
 		<h2>Sales Management</h2>
 		<h3><a href="https://wa.me/966503444442" title="966503444442">0503444442</a></h3>
